# phishing-feed-tracker

./: Dockerfile  docker-compose.yml  pyproject.toml  urls.db
app/: api.py  database.py  main.py  model.py  sc.py
app/mytypes/: urls.py
